// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Item Tests Attribute Stack Item - Buffer 1`] = `
Object {
  "__$type": "ByteArrayContractParameter",
  "type": 5,
  "value": "",
}
`;

exports[`Stack Item Tests Attribute Stack Item - ECPoint 1`] = `
Object {
  "__$type": "PublicKeyContractParameter",
  "type": 6,
  "value": "010101010101010101010101010101010101010101010101010101010101010101",
}
`;

exports[`Stack Item Tests Attribute Stack Item - UInt160 1`] = `
Object {
  "__$type": "Hash160ContractParameter",
  "type": 3,
  "value": "197ff6783d512a740d42f4cc4f5572955fa44c95",
}
`;

exports[`Stack Item Tests Attribute Stack Item - UInt256 1`] = `
Object {
  "__$type": "Hash256ContractParameter",
  "type": 4,
  "value": "a9b71a27c3f44e611e816b67e2cb75822d92e179993fc43e240a079d220bf59b",
}
`;

exports[`Stack Item Tests Boolean Stack Item - false 1`] = `
Object {
  "__$type": "BooleanContractParameter",
  "type": 1,
  "value": false,
}
`;

exports[`Stack Item Tests Boolean Stack Item - true 1`] = `
Object {
  "__$type": "BooleanContractParameter",
  "type": 1,
  "value": true,
}
`;

exports[`Stack Item Tests Buffer Stack Item 1`] = `
Object {
  "__$type": "ByteArrayContractParameter",
  "type": 5,
  "value": "00",
}
`;

exports[`Stack Item Tests ECPoint Stack Item 1`] = `
Object {
  "__$type": "PublicKeyContractParameter",
  "type": 6,
  "value": "010101010101010101010101010101010101010101010101010101010101010101",
}
`;

exports[`Stack Item Tests Integer Stack Item 1`] = `
Object {
  "__$type": "IntegerContractParameter",
  "type": 2,
  "value": "1",
}
`;

exports[`Stack Item Tests UInt160 Stack Item 1`] = `
Object {
  "__$type": "Hash160ContractParameter",
  "type": 3,
  "value": "197ff6783d512a740d42f4cc4f5572955fa44c95",
}
`;

exports[`Stack Item Tests UInt256 Stack Item 1`] = `
Object {
  "__$type": "Hash256ContractParameter",
  "type": 4,
  "value": "a9b71a27c3f44e611e816b67e2cb75822d92e179993fc43e240a079d220bf59b",
}
`;
